# rag_local_fs

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  script.py
.github/workflows/: ci.yml
docs/: api.md  index.md  mkdocs.yml
scripts/: build.py  download_dictionary.py  download_model.py  install_context_menu.py  run_tests.py  setup.py
src/: app.py  cache.py  config.py  coordinator.py  indexer.py  main.py  rag.py  reranker.py  security.py
src/ui/: autocomplete_input.py  chat_delegate.py  chat_model.py  chat_widgets.py  log_window.py  main_window.py  styles.css  tray.py  tray_icon.py
tests/: test_indexer.py  test_rag.py  test_ui.py
