[tool.poetry]
name = "rag-assistant"
version = "0.1.0"
description = "Локальный ассистент на основе RAG для поиска и анализа файлов"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "*"
langchain = "*"
sentence-transformers = "*"
faiss-cpu = "*"
pyqt5 = "*"
pypdf2 = "*"
docx2txt = "*"
pillow = "*"
pytesseract = "*"
beautifulsoup4 = "*"
sqlalchemy = "*"
pywin32 = {version = "*", platform = "win32"}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-qt = "*"
mkdocs = "*"
mkdocs-material = "*"
pyinstaller = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
